styles/styles.css
body {
    --page-padding: 5vw;

    padding: 0;
    margin: 0;

    font-family: "Noto Sans", "Lucida Grande", "Lucida Sans Unicode", "Lucida Sans", "DejaVu Sans", "Bitstream Vera Sans", "Liberation Sans", Verdana, "Verdana Ref", sans-serif;
    line-height: 1.6;
}

:where(:is(ul,ol)[role=list]) {
    list-style: none;
    padding-left: 0;
}

pre, code, kbd, samp {
    font-family: monospace, monospace;
}

a {
    color: currentColor;
}

h1 {
    font-size: 2em;
    margin-top: 0;
    font-weight: normal;
}

h2 {
    font-size: 1.3em;
    margin-top: 3em;
}

pre {
    max-width: calc(100% + (2 * var(--page-padding)));
    overflow-x: auto;
	scrollbar-width: thin;
    scrollbar-color: #888 transparent;
	-moz-tab-size: 4ch;
	-o-tab-size: 4ch;
	tab-size: 4ch;
	margin-inline: calc(-1 * var(--page-padding));
	padding-inline: calc(1 * var(--page-padding));
}

blockquote {
	margin-inline-start: 1em;
	padding-inline-start: 1em;
	border-inline-start: .2em solid #bbb;
}

dl {
    --placeholder: none
}
    dl .entry + .entry {
        margin-top: 1em;
    }

    dt {
        font-weight: bold;
    }

p > img:only-child {
    border: 1px solid #888;
}

.fig {
    margin-inline: 0;
}
    .fig figcaption {
        color: #444;
    }

    .fig > * {
        margin: 0;
    }

    @media (min-width: calc(5vw * 2 + 70ch + 1em + 20ch)) {
        .fig {
            display: flex;
            flex-flow: row;
            vertical-align: top;
            gap: 1em;
        }
        .fig figcaption {
            display: block;
            max-width: 20ch;
        }

        .fig > :not(figcaption) {
            width: 70ch;
        }
    }

.skip-link {
    display: inline-block;
    position: absolute;
    left: 0; top: 0;
    opacity: 0;
    pointer-events: none;
    padding: 1em;
    background: black;
    transition: opacity 100ms ease-in-out;
}
    .skip-link:focus {
        opacity: 1;
        pointer-events: all;
    }

.site-header {
    position: absolute;
    top: 0; left: 0; right: 0;
    padding-inline: var(--page-padding);
    overflow: hidden;
    z-index: 10;
    max-height: 3.9em;
    color: white;
}
    .site-header nav {
        display: flex;
        flex-flow: row nowrap;
        align-items: baseline;
    }
        .site-header ul {
            display: flex;
            flex-flow: row wrap;
            list-style: none;
        }
            .site-header ul li + li {
                margin-inline-start: 1em;
            }

        .site-header a:not(:hover, :focus) {
            text-decoration: none;
        }

        .site-header .menu-button {
            font-size: 1em;
            background: none;
            border: none;
            color: currentColor;
            padding: 0;
            margin-inline-end: 1em;
        }
        .site-header .menu-button:is(:hover, :focus) {
            text-decoration: underline;
        }

.site-footer {
    padding-inline: var(--page-padding);
    color: #555;
}

.issue-list {
	/**/
}
	.issue-list * + * {
		margin-top: 1em;
	}

.thisweek-issue {
    --placeholder: ;
}
    .issueheader > * {
        margin-block: 0;
    }
    
    .thisweek-issue .e-content {
        margin-inline: var(--page-padding);
    }

    .thisweek-issue .e-content :is(p, .chat-log) {
        max-width: 70ch;
    }

    .thisweek-issue .e-content > :first-child {
        margin-top: 1em;
    }
    
.chat-log {
    margin-inline: 0;
    margin-bottom: -.5em; /* compensate for datetime at the right */
}
    .chat-log > figcaption {
        text-align: end;
        font-size: .9em;
        line-height: 1.1em;
        color: #555;
    }
    .chat-log > figcaption a {
        text-decoration: none;
    }
    .chat-log > figcaption a:hover {
        color: black;
    }
    
    .chat-log > blockquote {
        margin: 0;
        padding-inline: 1ch;
        background: #eee;
        border: 1px solid #ccc;
    }        
    .chat-log > blockquote * {
        margin-block: 0;
    }

    .chat-log > blockquote p {
        text-indent: -.5em;
        margin-inline-start: .5em;
    }
        .chat-log > blockquote p * {
            text-indent: 0; /* why is this an inherited property */
        }
    
    .chat-log > blockquote > p > b {
        margin-inline-end: 1ch;
    }

    .chat-log .replyto {
        font-size: .9em;
    }
        .chat-log .replyto > b {
            font-weight: normal;
        }

        .chat-log .replyto > span {
            color: #5a5a5a;
            font-style: italic;
        }

    .chat-log .reaction {
        display: inline-block;
        font-size: .9em;
        line-height: 1.4em;
        background-color: #dadada;
        border: 1px solid #aaa;
        border-radius: 4px;
        padding-inline: .3em;
        margin-inline: .09em;
        transform: translateY(-.1em);
    }
        .chat-log .reaction .emoji {
            text-shadow: 1px 1px 0 black, -1px 1px 0 black, 1px -1px 0 black, -1px -1px 0 black;
        }
    
    .chat-log .stage-direction {
        display: inline-block;
        width: 100%;
        text-align: center;
        
        font-size: .8em;
        font-weight: bold;
        font-style: normal;
        color: #585858;

        border-top: 1px solid #585858;
        margin: .5em 0;
        line-height: 1.1;
    }
    
.page-head {
    box-sizing: border-box;
    padding-inline: var(--page-padding);
    padding-top: 3em;
    padding-bottom: 1em;
    min-height: 18em;
    background: 
        linear-gradient(120deg, #4b9, transparent 40em),
        linear-gradient(120deg, #12f, #01a);
    color: white;
}

.-container {
    padding-inline: var(--page-padding);
}

